fix: adjust gradient animation to prevent overflow (#107)

--- a/src/components/HomepageGradient/style.scss
+++ b/src/components/HomepageGradient/style.scss
@@ -113,22 +113,22 @@
 
 @keyframes gradient-move {
     0% {
-        transform: translate(0, 0) scale(1.2);
+        transform: translate(0, 0) scale(1);
     }
 
     25% {
-        transform: translate(-10%, 10%) scale(1.3);
+        transform: translate(-5%, 5%) scale(1.1);
     }
 
     50% {
-        transform: translate(10%, -10%) scale(1.1);
+        transform: translate(5%, -5%) scale(1);
     }
 
     75% {
-        transform: translate(-5%, -5%) scale(1.4);
+        transform: translate(-2%, -2%) scale(1.1);
     }
 
     100% {
-        transform: translate(0, 0) scale(1.2);
+        transform: translate(0, 0) scale(1);
     }
 }
